--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 
 }
 
@@ -13,34 +13,43 @@ p {
     color:lightgrey;
 }
 
+.contactLabel{
+    color:lightgrey;
+}
 .footer {
-    position: absolute;
+position: absolute;
     bottom: 0;
     width: 100%;
-    height: 3px;
+    height: 60px;
     line-height: 60px;
     background-color: #f5f5f5;
 }
 
 .portfolioImages {
-    width: 250px;
-   height: 170px;
-margin-top:-20px;
+    width: 245px;
+    height: 200px;
+    margin-top:-20px;
     margin-bottom: 10px;
-        position:relative;
+    position:relative;
     padding-top:20px;
     display:inline-block;
 }
 
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
 .notify-badge{
     position: absolute;
-    right:-200px;
+    right:100px;
     top:70px;
     z-index: 1;
     color: red;
     font-size: 38px;
     background:white;
     text-align: center;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 15px 15px 15px 15px    ;
     padding:5px 10px;
 }
