--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,11 @@ html {
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     margin-bottom: 60px;
-
+    /* background-image: (../assets/images/light-grey-terrazzo.png); */
 }
-
+h1 {
+  color: lightblue;
+}
 p {
     color:lightgrey;
 }
@@ -16,29 +18,47 @@ p {
 .contactLabel{
     color:lightgrey;
 }
+
+.navbar {
+  background-color: #CCCCFF;
+}
+
 .footer {
-position: absolute;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #f5f5f5;
+    background-color: #CCCCFF;
+}
+
+.portfolioItems{
+
 }
 
 .portfolioImages {
-    width: 245px;
-    height: 200px;
-    margin-top:-20px;
-    margin-bottom: 10px;
-    position:relative;
-    padding-top:20px;
-    display:inline-block;
+    width: 285px;
+    height: 230px;
+    margin: auto;
+    display: block;
+}
+
+.portfolioLinks {
+  color: white;
+  font-size: 28px;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 
 .img-fluid {
     max-width: 100%;
     height: auto;
+}
+#btnSubmit {
+  position: relative;
+  left: 20px;
+  bottom: 6px;
 }
 
 .notify-badge{
